fix booking checkout page on mobile

--- a/src/Pages/BookingCheckout.razor.css
+++ b/src/Pages/BookingCheckout.razor.css
@@ -11,6 +11,7 @@ h1 {
 
 .checkout-button {
     padding: 8px 16px;
+    margin: 1vh;
     background-color: rgb(230, 231, 46);
     border-width: 0px;
     color: rgb(97, 97, 97);
